# swirl-lm

./: .flake8  .gitignore  BUILD  CHANGELOG.md  LICENSE  METADATA  OWNERS  README.md  WORKSPACE  __init__.py  copy.bara.sky  pyproject.toml
.github/workflows/: pytest_and_autopublish.yml
base/: BUILD  driver.py  driver_tpu.py  driver_tpu_test.py  parameters.proto  parameters.py  parameters_test.py  physical_variable_keys_manager.py  physical_variable_keys_manager_test.py
base/testdata/: swirl_lm_parameters.textpb
boundary_condition/: BUILD  boundary_condition_utils.py  boundary_condition_utils_test.py  boundary_conditions.proto  boundary_models.proto  immersed_boundary_method.py  immersed_boundary_method_test.py  monin_obukhov_similarity_theory.py  monin_obukhov_similarity_theory_test.py  outflow.py  outflow_test.py  rayleigh_damping_layer.py  rayleigh_damping_layer_test.py  synthetic_turbulent_inflow.py  synthetic_turbulent_inflow_test.py
boundary_condition/test_data/: inflow_0_replicas112.npy  inflow_0_replicas121.npy  inflow_0_replicas211.npy  inflow_1_replicas121.npy  inflow_1_replicas211.npy  inflow_2_replicas112.npy  inflow_2_replicas211.npy  monin_obukhov_similarity_theory_config.textpb  monin_obukhov_similarity_theory_config_negative_heat_flux.textpb  monin_obukhov_similarity_theory_config_reg.textpb  monin_obukhov_similarity_theory_config_zero_heat_flux.textpb
communication/: BUILD  halo_exchange.py  halo_exchange_test.py  halo_exchange_utils.py  halo_exchange_utils_test.py
core/: BUILD  simulation.py
docs/: api.rst  cloud_tpu.md  conf.py  index.rst
equations/: BUILD  common.py  pressure.proto  pressure.py  pressure_test.py  scalars.proto  scalars.py  scalars_test.py  utils.py  utils_test.py  velocity.py  velocity_test.py
equations/testdata/: pressure_config.textpb  velocity_config_mixed_wall.textpb
ext/dft/: BUILD  dft.py  dft_initializer.py  dft_initializer_test.py  dft_test.py
linalg/: BUILD  base_poisson_solver.py  conjugate_gradient_solver.py  conjugate_gradient_solver_test.py  fast_diagonalization_solver.py  fast_diagonalization_solver_test.py  jacobi_solver.py  multigrid.py  multigrid_1_core_compare_test.py  multigrid_3d.py  multigrid_3d_test.py  multigrid_3d_utils.py  multigrid_3d_utils_test.py  multigrid_multicore_3d_test.py  multigrid_multicore_test.py  multigrid_test.py  multigrid_test_common.py  multigrid_utils.py  multigrid_utils_test.py  poisson_solver.proto  poisson_solver.py  poisson_solver_cg_test.py  poisson_solver_residuals_test.py  poisson_solver_test.py  poisson_solver_testutil.py
numerics/: BUILD  algebra.py  calculus.py  calculus_test.py  convection.py  convection_test.py  diffusion.py  diffusion_test.py  filter_test.py  filters.py  interpolation.py  interpolation_test.py  numerics.proto  root_finder.py  root_finder_test.py  time_integration.py  time_integration_test.py
numerics/testdata/: config.textpb
physics/: BUILD  constants.py
physics/atmosphere/: BUILD  precipitation.py  precipitation_test.py
physics/combustion/: BUILD  combustion.proto  igniter.py  igniter_test.py  onestep.py  onestep_test.py  turbulent_kinetic_energy.py  turbulent_kinetic_energy_test.py  wood.py  wood_test.py
physics/thermodynamics/: BUILD  constant_density.py  constant_density_test.py  ideal_gas.py  water.py  (+11 more)
swirl_lm/: __init__.py  setup.sh
tests/: lpt_2wc_1_replica.py  lpt_2wc_4_replica.py  lpt_utils_test_tensor_scatter_update_ints.py  tensorflow_testcase.py
utility/: BUILD  __init__.py  build_defs.bzl  common_ops.py  common_ops_test.py  components_debug.py  components_debug_test.py  composite_types.py  get_kernel_fn.py  get_kernel_fn_test.py  grid_parametrization.proto  grid_parametrization.py  grid_parametrization_test.py  init_fn.py  init_fn_test.py  log_invocation.py  log_invocation_test.py  monitor.proto  monitor.py  monitor_test.py  probe.proto  probe.py  probe_test.py  tf_test_util.py  tf_test_util_test.py  tf_test_util_tf1_test.py  tf_tpu_test_util.py  types.py
(+360 files in other folders)
